@@ -337,11 +337,7 @@ extern int workarea[4];
 extern struct conky_window window;
 
 void init_X11();
-#if defined OWN_WINDOW
-void init_window(int use_own_window, char* wm_class_name, int width, int height, int on_bottom, int fixed_pos, int set_trans, int back_colour, char * nodename);
-#else
-void init_window(int use_own_window, int width, int height, int on_bottom, int set_trans, int back_colour, char * nodename);
-#endif
+void init_window(int use_own_window, int width, int height, int set_trans, int back_colour, char * nodename);
 void create_gc();
 void set_transparent_background(Window win);
 long get_x11_color(const char *);
